--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /react15/node_modules
 /react16webpack1/node_modules
+/expressjsStub/node_modules
+/reactCource-L/node_modules
+/reactRedux-Y/node_modules
