--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /reactCource-L/node_modules
 /reactRedux-Y/node_modules
 /expressjs/node_modules
+/expressjs-login-signup-stub/node_modules
+/react16-login-signup-stub/node_modules
